--- a/learn-certs-pr/courses/az-500t00.yml
+++ b/learn-certs-pr/courses/az-500t00.yml
@@ -3,6 +3,7 @@ title: Microsoft Azure-Sicherheitstechnologien
 metadata:
   title: 'Kurs AZ-500T00--A: Microsoft Azure Security Technologies'
   description: 'Kurs AZ-500T00--A: Microsoft Azure Security Technologies'
+  iltScheduling: true
 uid: course.az-500t00
 courseNumber: AZ-500T00
 hoursToComplete: 96
