--- a/learn-certs-pr/courses/mb-920t00.yml
+++ b/learn-certs-pr/courses/mb-920t00.yml
@@ -1,328 +1,39 @@
 ### YamlMime:Course
-title: Grundlegende Informationen zu Microsoft Dynamics 365 (ERP)
+title: "Grundlegende Informationen zu Microsoft Dynamics\_365 (ERP)"
 metadata:
-  title: 'Kurs MB-920T00 – A: Grundlegende Informationen zu Microsoft Dynamics 365 (ERP)'
-  description: 'Kurs MB-920T00 – A: Grundlegende Informationen zu Microsoft Dynamics 365 (ERP)'
-  ms.openlocfilehash: b575e1414e1eea0abe1ce82e00bb4dbcf3d2b875
-  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
-  ms.translationtype: MT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 12/28/2021
-  ms.locfileid: "132107210"
+  title: "Kurs MB-920T00 – A: Grundlegende Informationen zu Microsoft Dynamics\_365 (ERP)"
+  description: "Kurs MB-920T00 – A: Grundlegende Informationen zu Microsoft Dynamics\_365 (ERP)"
 uid: course.mb-920t00
 courseNumber: MB-920T00
 hoursToComplete: 48
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Beschreiben der Funktionen von Dynamics 365 for Supply Chain Management
-- skill: Beschreiben der Funktionen von Dynamics 365 for Finance
-- skill: Beschreiben der Funktionen von Dynamics 365 for Commerce
-- skill: Beschreiben der Funktionen von Dynamics 365 for Human Resources
-- skill: Beschreiben der Funktionen von Dynamics 365 for Project Operations (ERP)
+  - skill: "Beschreiben der Funktionen von Dynamics\_365 for Supply Chain Management"
+  - skill: "Beschreiben der Funktionen von Dynamics\_365 for Finance"
+  - skill: "Beschreiben der Funktionen von Dynamics\_365 for Commerce"
+  - skill: "Beschreiben der Funktionen von Dynamics\_365 for Human Resources"
+  - skill: "Beschreiben der Funktionen von Dynamics\_365 for Project Operations (ERP)"
 learningPartnersLink: /learn/certifications/partners
 locales:
-- en
-- ja
-- zh-cn
-- ko
-- de
-- fr
-- es
-- pt-br
-- ru
-- zh-tw
-- it
+  - en
+  - ar
+  - zh-cn
+  - zh-tw
+  - fr
+  - de
+  - it
+  - ja
+  - ko
+  - pt-br
+  - ru
+  - es
 levels:
-- beginner
+  - beginner
 roles:
-- business-owner
+  - business-owner
 products:
-- dynamics-365
+  - dynamics-365
 exams:
-- uid: exam.mb-920
-summary: >-
-  In diesem Kurs erhalten Sie eine umfassende Einführung in die Customer Engagement-Funktionen von Dynamics 365. Sie lernen das Konzept des Ressourcenmanagements in Unternehmen (Enterprise Resource Management, ERP) sowie die einzelnen Apps für Finanzen und operatives Geschäft kennen. Dazu zählen Dynamics 365 for Supply Chain Management, Dynamics 365 for Finance, Dynamics 365 for Commerce, Dynamics 365 for Human Resources und die ERP-Funktionen von Dynamics 365 for Project Operations. Dieser Kurs umfasst Lektionen und praktische Übungen.
-
-
-  #### <a name="audience-profile"></a>Zielgruppenprofil
-
-
-  Von diesem Grundlagenkurs profitieren Personen zahlreicher Aufgabenbereiche und verschiedener Karrierephasen. Dazu zählen IT-Experten, Projektbeteiligte, Personen mit Interesse an den Finanz- und Betriebsfunktionen von Dynamics 365, Studierende, Absolventen und Quereinsteiger, die mithilfe von Dynamics 365 beruflich den nächsten Schritt machen möchten.
-outlineSection: >-
-  ### <a name="module-1-learn-the-fundamentals-of-dynamics-365-supply-chain-management"></a>Modul 1: Grundlegende Informationen zu Dynamics 365 for Supply Chain Management
-
-
-  In diesem Modul lernen Sie die grundlegenden Konzepte des Ressourcenmanagements in Unternehmen sowie die Gemeinsamkeiten der Apps für Finanzen und operatives Geschäft kennen, bevor Sie sich ausführlicher mit Dynamics 365 for Supply Chain Management befassen. Zunächst werden die Standardgeschäftsprozesse im Marketingbereich und die Herangehensweise der Marketingabteilung beschrieben. Anschließend werden die Produktfunktionen analysiert. Und zuletzt werden Sie über weitere Marketing-Apps wie LinkedIn Campaign Manager, Dynamics 365 for Customer Voice und Dynamics 365 for Customer Insights informiert.
-
-
-  #### <a name="lessons"></a>Lektionen
-
-
-  *   Einführung in Apps für Finanzen und operatives Geschäft
-
-
-  *   Identifizieren der allgemeinen Funktionen von Dynamics 365 for Supply Chain Management
-
-
-  *   Erkunden der Lager- und Bestandsfunktionen in Dynamics 365 for Supply Chain Management
-
-
-  *   Erkunden der Produktionsstrategien in Dynamics 365 for Supply Chain Management
-
-
-  *   Erkunden der Funktionen zur Ressourcenverwaltung in Dynamics 365 for Supply Chain Management
-
-
-  *   Abschlusslab
-
-
-  #### <a name="lab--navigate-the-finance-and-operations-apps"></a>Lab: Navigieren in den Apps für Finanzen und operatives Geschäft
-
-
-  ####
-
-
-  #### <a name="lab--explore-workspaces-and-filtering"></a>Lab: Erkunden von Arbeitsbereichen und Filtern
-
-
-  ####
-
-
-  #### <a name="lab--create-a-product"></a>Lab: Erstellen eines Produkts
-
-
-  ####
-
-
-  #### <a name="lab--create-a-purchase-order"></a>Lab: Erstellen einer Bestellung
-
-
-  ####
-
-
-  #### <a name="lab--create-a-warehouse"></a>Lab: Erstellen eines Lagers
-
-
-  ####
-
-
-  #### <a name="lab--create-a-production-order"></a>Lab: Erstellen eines Produktionsauftrags
-
-
-  ####
-
-
-  #### <a name="lab--create-a-planned-work-order"></a>Lab: Erstellen eines geplanten Arbeitsauftrags
-
-
-  ####
-
-
-  #### <a name="lab--dynamics-365-supply-chain-management-capstone-lab"></a>Lab: Abschlusslab für Dynamics 365 for Supply Chain Management
-
-
-  ####
-
-
-  *   Erkunden der Produktverwaltung
-
-
-  *   Erkunden der Lagerverwaltung
-
-
-  *   Erkunden der Produktionsverwaltung
-
-
-  *   Erkunden der Bestandsverwaltung
-
-
-  *   Erkunden von Beschaffung und Einkauf
-
-
-  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
-
-
-  *   Beschreiben der allgemeinen Features der Apps für Finanzen und operatives Geschäft
-
-
-  *   Beschreiben der allgemeinen Funktionen von Dynamics 365 for Supply Chain Management
-
-
-  *   Beschreiben der Funktionen zur Lager- und Bestandsverwaltung, der Produktion und der Ressourcenverwaltung
-
-
-  ### <a name="module-2-learn-the-fundamentals-of-dynamics-365-finance"></a>Modul 2: Grundlegende Informationen zu Dynamics 365 for Finance
-
-
-  In diesem Modul erfahren Sie mehr zu Dynamics 365 for Finance. Sie lernen die Kernfunktionen des Produkts kennen und erhalten ausführliche Informationen zum Hauptbuch, zu Kreditoren und Debitoren. Anschließend werden die Ausgabenverwaltung und die Budgetierung in Dynamics 365 for Finance beschrieben.
-
-
-  #### <a name="lessons"></a>Lektionen
-
-
-  *   Erkunden der Kernfunktionen von Dynamics 365 for Finance
-
-
-  *   Erkunden des Hauptbuchs
-
-
-  *   Erkunden von Kreditoren und Debitoren
-
-
-  *   Erkunden von Ausgabenverwaltung, Anlagenverwaltung und Budgetierung
-
-
-  *   Abschlusslab
-
-
-  #### <a name="lab--capstone-lab"></a>Lab: Abschlusslab
-
-
-  ####
-
-
-  #### <a name="lab--create-a-vendor-payment-journal"></a>Lab: Erstellen einer Kreditorenzahlungserfassung
-
-
-  ####
-
-
-  #### <a name="lab--create-a-financial-dimension"></a>Lab: Erstellen einer Finanzdimension
-
-
-  ####
-
-
-  *   Erkunden des Hauptbuchs
-
-
-  *   Erkunden der Kreditoren
-
-
-  *   Erkunden der Debitoren
-
-
-  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
-
-
-  *   Erläutern der Kernfunktionen von Dynamics 365 for Finance
-
-
-  *   Erläutern von Hauptbuch, Kreditoren und Debitoren
-
-
-  *   Erläutern von Ausgabenverwaltung, Anlagenverwaltung und Budgetierung
-
-
-  ### <a name="module-3-learn-the-fundamentals-of-dynamics-365-commerce"></a>Modul 3: Grundlegende Informationen zu Dynamics 365 for Commerce
-
-
-  In diesem Modul erfahren Sie mehr zu Dynamics 365 for Commerce. Sie lernen die Kernfunktionen des Produkts kennen und erhalten ausführliche Informationen zu Dynamics 365 for Fraud Protection und dessen Funktionen.
-
-
-  #### <a name="lessons"></a>Lektionen
-
-
-  *   Erkunden der Funktionen von Dynamics 365 for Commerce
-
-
-  *   Erkunden von Dynamics 365 for Fraud Protection
-
-
-  *   Abschlusslab
-
-
-  #### <a name="lab--create-a-discount-product"></a>Lab: Erstellen eines Rabattprodukts
-
-
-  ####
-
-
-  #### <a name="lab--create-a-product-assortment"></a>Lab: Erstellen eines Produktsortiments
-
-
-  ####
-
-
-  #### <a name="lab--capstone-lab"></a>Lab: Abschlusslab
-
-
-  ####
-
-
-  *   Erkunden von Commerce Headquarters
-
-
-  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
-
-
-  *   Erläutern von Dynamics 365 for Commerce
-
-
-  *   Erläutern von Dynamics 365 for Fraud Protection
-
-
-  ### <a name="module-4-learn-the-fundamentals-of-dynamics-365-human-resources"></a>Modul 4: Grundlegende Informationen zu Dynamics 365 for Human Resources
-
-
-  In diesem Modul erfahren Sie mehr zu Dynamics 365 for Human Resources. Sie lernen die Kernfunktionen des Produkts kennen und erhalten ausführliche Informationen zu den Personalverwaltungsfunktionen des Produkts.
-
-
-  #### <a name="lessons"></a>Lektionen
-
-
-  *   Erkunden der Kernfunktionen von Dynamics 365 for Human Resources
-
-
-  *   Erkunden der Personalverwaltungsfunktionen
-
-
-  *   Abschlusslab
-
-
-  #### <a name="lab--capstone-lab"></a>Lab: Abschlusslab
-
-
-  ####
-
-
-  *   Erkunden von Human Resources
-
-
-  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
-
-
-  *   Erläutern der Kernfunktionen von Dynamics 365 for Human Resources
-
-
-  *   Erläutern der Personalverwaltungsfunktionen
-
-
-  ### <a name="module-5-learn-the-fundamentals-of-dynamics-365-project-operations-erp"></a>Modul 5: Grundlegende Informationen zu Dynamics 365 for Project Operations (ERP)
-
-
-  In diesem Modul erfahren Sie mehr zu den Funktionen des Ressourcenmanagements in Unternehmen von Dynamics 365 for Project Operations. Sie lernen den Lebenszyklus sowie die Planungs- und Ausführungsfunktionen eines Produkts kennen.
-
-
-  #### <a name="lessons"></a>Lektionen
-
-
-  *   Identifizieren von Funktionen zur Verwaltung des Projektlebenszyklus in Dynamics 365 for Project Operations
-
-
-  *   Erkunden der Funktionen zur Projektplanung und -ausführung von Dynamics 365 for Project Operations
-
-
-  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
-
-
-  *   Erläutern der Funktionen zur Verwaltung des Projektlebenszyklus in Dynamics 365 for Project Operations
-
-
-  *   Erkunden der Funktionen zur Projektplanung und -ausführung von Dynamics 365 for Project Operations
-
-
-  #### <a name="additional-reading"></a>Weiterführende Lektüre
-
-
-  Weitere Informationen zu den Inhalten dieses Kurses finden Sie unter Microsoft Learn. Beachten Sie, dass für jedes Produkt ein eigener Lernpfad verfügbar ist.
+  - uid: exam.mb-920
+summary: "In diesem Kurs erhalten Sie eine umfassende Einführung in die Customer Engagement-Funktionen von Dynamics 365. Sie lernen das Konzept des Ressourcenmanagements in Unternehmen (Enterprise Resource Management, ERP) sowie die einzelnen Apps für Finanzen und operatives Geschäft kennen. Dazu zählen Dynamics\_365 for Supply Chain Management, Dynamics\_365 for Finance, Dynamics\_365 for Commerce, Dynamics\_365 for Human Resources und die ERP-Funktionen von Dynamics\_365 for Project Operations. Dieser Kurs umfasst Lektionen und praktische Übungen.\n\n#### <a name=\"audience-profile\"></a>Zielgruppenprofil\n\nVon diesem Grundlagenkurs profitieren Personen zahlreicher Aufgabenbereiche und verschiedener Karrierephasen. Dazu zählen IT-Experten, Projektbeteiligte, Personen mit Interesse an den Finanz- und Betriebsfunktionen von Dynamics\_365, Studierende, Absolventen und Quereinsteiger, die mithilfe von Dynamics\_365 beruflich den nächsten Schritt machen möchten."
+outlineSection: "### <a name=\"module-1-learn-the-fundamentals-of-dynamics-365-supply-chain-management\"></a>Modul\_1: Grundlegende Informationen zu Dynamics\_365 for Supply Chain Management\n\nIn diesem Modul lernen Sie die grundlegenden Konzepte des Ressourcenmanagements in Unternehmen sowie die Gemeinsamkeiten der Apps für Finanzen und operatives Geschäft kennen, bevor Sie sich ausführlicher mit Dynamics\_365 for Supply Chain Management befassen. Zunächst werden die Standardgeschäftsprozesse im Marketingbereich und die Herangehensweise der Marketingabteilung beschrieben. Anschließend werden die Produktfunktionen analysiert. Und zuletzt werden Sie über weitere Marketing-Apps wie LinkedIn Campaign Manager, Dynamics\_365 for Customer Voice und Dynamics\_365 for Customer Insights informiert.\n\n#### <a name=\"lessons\"></a>Lektionen\n\n*   Einführung in Apps für Finanzen und operatives Geschäft\n\n*   Identifizieren der allgemeinen Funktionen von Dynamics\_365 for Supply Chain Management\n\n*   Erkunden der Lager- und Bestandsfunktionen in Dynamics\_365 for Supply Chain Management\n\n*   Erkunden der Produktionsstrategien in Dynamics\_365 for Supply Chain Management\n\n*   Erkunden der Funktionen zur Ressourcenverwaltung in Dynamics\_365 for Supply Chain Management\n\n*   Abschlusslab\n\n\n#### <a name=\"lab--navigate-the-finance-and-operations-apps\"></a>Lab: Navigieren in den Apps für Finanzen und operatives Geschäft\n\n####\n\n#### <a name=\"lab--explore-workspaces-and-filtering\"></a>Lab: Erkunden von Arbeitsbereichen und Filtern\n\n####\n\n#### <a name=\"lab--create-a-product\"></a>Lab: Erstellen eines Produkts\n\n####\n\n#### <a name=\"lab--create-a-purchase-order\"></a>Lab: Erstellen einer Bestellung\n\n####\n\n#### <a name=\"lab--create-a-warehouse\"></a>Lab: Erstellen eines Lagers\n\n####\n\n#### <a name=\"lab--create-a-production-order\"></a>Lab: Erstellen eines Produktionsauftrags\n\n####\n\n#### <a name=\"lab--create-a-planned-work-order\"></a>Lab: Erstellen eines geplanten Arbeitsauftrags\n\n####\n\n#### <a name=\"lab--dynamics-365-supply-chain-management-capstone-lab\"></a>Lab: Abschlusslab für Dynamics\_365 for Supply Chain Management\n\n####\n   *   Erkunden der Produktverwaltung\n   *   Erkunden der Lagerverwaltung\n   *   Erkunden der Produktionsverwaltung\n   *   Erkunden der Bestandsverwaltung\n   *   Erkunden von Beschaffung und Einkauf\n\nNach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:\n\n*   Beschreiben der allgemeinen Features der Apps für Finanzen und operatives Geschäft\n\n*   Beschreiben der allgemeinen Funktionen von Dynamics\_365 for Supply Chain Management\n\n*   Beschreiben der Funktionen zur Lager- und Bestandsverwaltung, der Produktion und der Ressourcenverwaltung\n\n\n### <a name=\"module-2-learn-the-fundamentals-of-dynamics-365-finance\"></a>Modul\_2: Grundlegende Informationen zu Dynamics\_365 for Finance\n\nIn diesem Modul erfahren Sie mehr zu Dynamics\_365 for Finance. Sie lernen die Kernfunktionen des Produkts kennen und erhalten ausführliche Informationen zum Hauptbuch, zu Kreditoren und Debitoren. Anschließend werden die Ausgabenverwaltung und die Budgetierung in Dynamics\_365 for Finance beschrieben.\n\n#### <a name=\"lessons\"></a>Lektionen\n\n*   Erkunden der Kernfunktionen von Dynamics\_365 for Finance\n\n*   Erkunden des Hauptbuchs\n\n*   Erkunden von Kreditoren und Debitoren\n\n*   Erkunden von Ausgabenverwaltung, Anlagenverwaltung und Budgetierung\n\n*   Abschlusslab\n\n\n#### <a name=\"lab--capstone-lab\"></a>Lab: Abschlusslab\n\n####\n   *   Erkunden des Hauptbuchs\n   *   Erkunden der Kreditoren\n   *   Erkunden der Debitoren\n\n#### <a name=\"lab--create-a-vendor-payment-journal\"></a>Lab: Erstellen einer Kreditorenzahlungserfassung\n\n####\n\n#### <a name=\"lab--create-a-financial-dimension\"></a>Lab: Erstellen einer Finanzdimension\n\n####\n\nNach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:\n\n*   Erläutern der Kernfunktionen von Dynamics\_365 for Finance\n\n*   Erläutern von Hauptbuch, Kreditoren und Debitoren\n\n*   Erläutern von Ausgabenverwaltung, Anlagenverwaltung und Budgetierung\n\n\n### <a name=\"module-3-learn-the-fundamentals-of-dynamics-365-commerce\"></a>Modul\_3: Grundlegende Informationen zu Dynamics\_365 for Commerce\n\nIn diesem Modul erfahren Sie mehr zu Dynamics\_365 for Commerce. Sie lernen die Kernfunktionen des Produkts kennen und erhalten ausführliche Informationen zu Dynamics\_365 for Fraud Protection und dessen Funktionen.\n\n#### <a name=\"lessons\"></a>Lektionen\n\n*   Erkunden der Funktionen von Dynamics\_365 for Commerce\n\n*   Erkunden von Dynamics\_365 for Fraud Protection\n\n*   Abschlusslab\n\n\n#### <a name=\"lab--create-a-discount-product\"></a>Lab: Erstellen eines Rabattprodukts\n\n####\n\n#### <a name=\"lab--create-a-product-assortment\"></a>Lab: Erstellen eines Produktsortiments\n\n####\n\n#### <a name=\"lab--capstone-lab\"></a>Lab: Abschlusslab\n\n####\n   *   Erkunden von Commerce Headquarters\n\nNach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:\n\n*   Erläutern von Dynamics\_365 for Commerce\n\n*   Erläutern von Dynamics\_365 for Fraud Protection\n\n\n### <a name=\"module-4-learn-the-fundamentals-of-dynamics-365-human-resources\"></a>Modul\_4: Grundlegende Informationen zu Dynamics\_365 for Human Resources\n\nIn diesem Modul erfahren Sie mehr zu Dynamics\_365 for Human Resources. Sie lernen die Kernfunktionen des Produkts kennen und erhalten ausführliche Informationen zu den Personalverwaltungsfunktionen des Produkts.\n\n#### <a name=\"lessons\"></a>Lektionen\n\n*   Erkunden der Kernfunktionen von Dynamics\_365 for Human Resources\n\n*   Erkunden der Personalverwaltungsfunktionen\n\n*   Abschlusslab\n\n\n#### <a name=\"lab--capstone-lab\"></a>Lab: Abschlusslab\n\n####\n   *   Erkunden von Human Resources\n\nNach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:\n\n*   Erläutern der Kernfunktionen von Dynamics\_365 for Human Resources\n\n*   Erläutern der Personalverwaltungsfunktionen\n\n\n### <a name=\"module-5-learn-the-fundamentals-of-dynamics-365-project-operations-erp\"></a>Modul\_5: Grundlegende Informationen zu Dynamics\_365 for Project Operations (ERP)\n\nIn diesem Modul erfahren Sie mehr zu den Funktionen des Ressourcenmanagements in Unternehmen von Dynamics\_365 for Project Operations. Sie lernen den Lebenszyklus sowie die Planungs- und Ausführungsfunktionen eines Produkts kennen.\n\n#### <a name=\"lessons\"></a>Lektionen\n\n*   Identifizieren von Funktionen zur Verwaltung des Projektlebenszyklus in Dynamics\_365 for Project Operations\n\n*   Erkunden der Funktionen zur Projektplanung und -ausführung von Dynamics\_365 for Project Operations\n\n\nNach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:\n\n*   Erläutern der Funktionen zur Verwaltung des Projektlebenszyklus in Dynamics\_365 for Project Operations\n\n*   Erkunden der Funktionen zur Projektplanung und -ausführung von Dynamics\_365 for Project Operations\n\n\n#### <a name=\"additional-reading\"></a>Weiterführende Lektüre\n\nWeitere Informationen zu den Inhalten dieses Kurses finden Sie unter Microsoft Learn. Beachten Sie, dass für jedes Produkt ein eigener Lernpfad verfügbar ist."
