--- a/learn-certs-pr/courses/pl-100t00.yml
+++ b/learn-certs-pr/courses/pl-100t00.yml
@@ -3,87 +3,89 @@ title: Microsoft Power Platform App Maker
 metadata:
   title: 'Kurs PL-100T00-A: App-Ersteller in Microsoft Power Platform'
   description: 'Kurs PL-100T00-A: App-Ersteller in Microsoft Power Platform'
-  ms.openlocfilehash: 078ac94d2af1b8d91f6b49f38f5f9397b5c09308
-  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
-  ms.translationtype: MT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 12/28/2021
-  ms.locfileid: "132112605"
 uid: course.pl-100t00
 courseNumber: PL-100T00
 hoursToComplete: 72
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Entwerfen Sie Apps und automatisieren Sie Workflows
-- skill: Erstellen Sie Apps und automatisieren Sie Workflows
-- skill: Analysieren und visualisieren Sie Daten im Kontext mit einer App oder einem automatisierten Workflow
+  - skill: Entwerfen Sie Apps und automatisieren Sie Workflows
+  - skill: Erstellen Sie Apps und automatisieren Sie Workflows
+  - skill: Analysieren und visualisieren Sie Daten im Kontext mit einer App oder einem automatisierten Workflow
 learningPartnersLink: /learn/certifications/partners
 locales:
-- en
+  - en
 levels:
-- beginner
+  - beginner
 roles:
-- developer
+  - developer
 products:
-- power-platform
+  - power-platform
 exams:
-- uid: exam.pl-100
-summary: >-
+  - uid: exam.pl-100
+studyGuide:
+  - uid: learn-bizapps.wwl.introduction-power-platform
+  - uid: learn-bizapps.intro-model-driven-apps-common-data-service
+  - uid: learn-bizapps.powerapps-common-data-service
+  - uid: learn-bizapps.powerapps-design-model-driven-apps
+  - uid: learn-dynamics.create-manage-fields-within-entity
+  - uid: learn-dynamics.get-started-security-roles
+  - uid: learn-bizapps.use-documentation
+  - uid: learn-bizapps.get-started-dataverse-teams
+  - uid: learn-bizapps.build-app-dataverse-teams
+  - uid: learn-bizapps.create-powerapps
+  - uid: learn-bizapps.navigation-canvas-app
+  - uid: learn-bizapps.how-to-build-ui-canvas-app
+  - uid: learn-bizapps.controls-canvas-apps
+  - uid: learn-bizapps.flow-get-started
+  - uid: learn-bizapps.flow-administration
+  - uid: learn-bizapps.intro-business-process-flows
+  - uid: learn-bizapps.create-immersive-flow
+  - uid: learn-bizapps.security-governance-intro
+  - uid: learn-bizapps.build-first-workflow
+  - uid: learn-bizapps.get-started-with-power-bi
+  - uid: learn-bizapps.get-data-power-bi
+  - uid: learn-bizapps.dataverse-teams-power-bi
+  - uid: learn-bizapps.get-started-with-ai-builder
+  - uid: learn-bizapps.create-chatbot-power-virtual-agents-dataverse-teams
+summary: |-
   In diesem Kurs lernen Sie, wie man Apps mit Low-Code-Techniken erstellt, um Geschäftsaufgaben und -prozesse mit Hilfe von Microsoft Power Platform zu vereinfachen, zu automatisieren und zu transformieren.
-
 
   #### <a name="audience-profile"></a>Zielgruppenprofil
 
-
   Der App-Hersteller erstellt Lösungen, um Aufgaben und Prozesse für sich und sein Team zu vereinfachen, zu automatisieren und zu transformieren, die alle über fundiertes Fachwissen im Lösungsbereich verfügen. Sie verfügen über grundlegende Fähigkeiten in den Bereichen Datenmodellierung, Gestaltung der Benutzererfahrung, Anforderungsanalyse und Prozessanalyse. Der App-Maker erstellt und setzt Geschäftsprozesse um, strukturiert die digitale Sammlung von Informationen, verbessert die Effizienz wiederholbarer Aufgaben und automatisiert Geschäftsprozesse. Der App-Hersteller verwendet die Hersteller-Tools der Power Plattform, um geschäftliche Probleme zu lösen. Sie können erweiterte Funktionen von Microsoft-Apps und Produktivitätswerkzeugen von Drittanbietern nutzen. Der App-Hersteller ist sich der Funktionen und Einschränkungen der verfügbaren Tools bewusst und weiß, wie diese angewendet werden. Der App-Hersteller ist selbstgesteuert und lösungsorientiert. Sie verfügen möglicherweise nicht über eine formelle IT-Schulung, können jedoch mit Hilfe von Technologie Geschäftsprobleme mit einer persönlichen Wachstumsphilosophie lösen. Sie verstehen die betrieblichen Bedürfnisse und haben eine Vision des gewünschten Ergebnisses. Sie nähern sich Problemen mit schrittweisen und iterativen Strategien.
-prerequisitesSection: >-
+prerequisitesSection: |-
   *   Fähigkeiten in den Bereichen grundlegende Datenmodellierung, Gestaltung der Benutzeroberfläche, Anforderungsanalyse und
-
 
 
   Prozessanalyse.
 
-
   *   Ausrichtung auf persönliche Weiterentwicklung und Vertrautheit im Umgang mit Technologie zur Lösung geschäftlicher Probleme.
-
 
   *   Verständnis für den betrieblichen Bedarf&nbsp;und eine Vorstellung vom gewünschten Ergebnis. Angehen von
 
 
-
   Problemen mit schrittweisen und iterativen Strategien.
-outlineSection: >-
+outlineSection: |-
   ### <a name="module-1-introduction-to-microsoft-power-platform"></a>Modul 1: Einführung in Microsoft Power Platform
-
 
   In diesem Modul erhalten Sie eine Einführung in Microsoft Power Platform. Lernen Sie die Komponenten von Power Platform kennen und erfahren Sie, wie Sie sie zur Erstellung von Geschäftslösungen einsetzen können.
 
-
   ### <a name="module-2-create-a-model-driven-app-in-power-apps"></a>Modul 2: Erstellen einer modellgesteuerten App in Power Apps
-
 
   Dieses Modul führt Sie in die Erstellung einer modellgesteuerten App in Power Apps ein, die Microsoft Dataverse verwendet.
 
-
   ### <a name="module-3-create-a-canvas-app-in-power-apps"></a>Modul 3: Erstellen Sie eine Canvas-App in Power Apps
-
 
   Dieses Modul führt Sie in Power Apps mit Canvas ein, hilft Ihnen beim Erstellen und Anpassen einer App sowie beim Verwalten und Verteilen. Dieses Modul legt außerdem den Schwerpunkt auf die Bereitstellung einer idealen App-Navigation und die Erstellung einer idealen Benutzeroberfläche mithilfe von Designs, Symbolen, Bildern, Personalisierung, verschiedenen Formfaktoren und Steuerelementen.
 
-
   ### <a name="module-4-automate-a-business-process-using-power-automate"></a>Modul 4: Automatisieren eines Geschäftsprozesss mit Power Automate
-
 
   Dieses Modul führt Sie in Power Automate ein, zeigt Ihnen, wie Sie Workflows erstellen und Flows verwalten.
 
-
   ### <a name="module-5-create-and-use-analytics-reports-with-power-bi"></a>Modul 5: Erstellen und Verwenden von Analyseberichten mit Power BI
-
 
   Erfahren Sie, was Power BI ist, einschließlich der dazugehörigen Bausteine und wie diese zusammen funktionieren.
 
-
   ### <a name="module-6-get-started-with-ai-builder-and-power-virtual-agents"></a>Modul 6: Erste Schritte mit AI Builder und Power Virtual Agents
-
 
   Dieses Modul hilft Ihnen bei der Erstellung eines KI-Modells von Anfang an und zeigt, wie Sie es in Ihrem Unternehmen verwenden können ohne eine einzige Codezeile zu schreiben. Dieses Modul hilft Ihnen auch bei der Erstellung eines Chatbots mit Power Virtual Agents für Teams.
