--- a/learn-certs-pr/customer-data-platform-specialty/index.yml
+++ b/learn-certs-pr/customer-data-platform-specialty/index.yml
@@ -2,88 +2,66 @@
 title: 'Microsoft Certified: Customer Data Platform Specialty'
 metadata:
   title: 'Microsoft Certified: Customer Data Platform Specialty'
-  description: Microsoft Customer Data Platform Specialists implementieren Lösungen, die Einblicke in Kundenprofile bieten und mit denen Kundenbindungsaktivitäten nachverfolgt werden können, sodass das Benutzererlebnis der Kund*innen verbessert und die Kundenbindung gesteigert werden kann.
-  ms.openlocfilehash: f25eab470ab80ab0feedfffe5b571c640196343f
-  ms.sourcegitcommit: 506a51e91385fac41755ea8082b4a6f8097773e9
-  ms.translationtype: MT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137647543"
+  description: 'Microsoft Customer Data Platform Specialists implementieren Lösungen, die Einblicke in Kundenprofile bieten und mit denen Kundenbindungsaktivitäten nachverfolgt werden können, sodass das Benutzererlebnis der Kund*innen verbessert und die Kundenbindung gesteigert werden kann.'
 uid: certification.customer-data-platform-specialty
 iconUrl: /media/learn/certification/badges/microsoft-certified-specialty-badge.svg
-summary: >-
-  Wenn Ihr Spezialgebiet darin besteht, Lösungen zu implementieren, die Einblicke in Kundenprofile bieten und mit denen Kundenbindungsaktivitäten nachverfolgt werden können, sodass die Kundenerfahrung verbessert und die Kundenbindung gesteigert werden kann, könnte diese Zertifizierung Ihnen helfen, Ihre Fähigkeiten nachzuweisen und Karrierechancen zu eröffnen.
-
-
-  Als Kandidat für diese Zertifizierung sollten Sie praktische Erfahrung mit Dynamics 365 Customer Insights, Power Query, Microsoft Dataverse, Common Data Model, Microsoft Power Platform und mindestens einer zusätzlichen Dynamics 365-Anwendung haben. Darüber hinaus benötigen Sie direkte Erfahrung mit Verfahren im Zusammenhang mit Datenschutz, Compliance, Einwilligung, Sicherheit, verantwortungsvoller KI und Datenaufbewahrungsrichtlinien.
-
-
-  Außerdem benötigen Sie Erfahrung mit Prozessen im Zusammenhang mit KPI sowie Datenaufbewahrung, -validierung, -visualisierung, -aufbereitung, -abgleich, -fragmentierung, -segmentierung und -erweiterung. Sie sollten ein allgemeines Verständnis von Azure Machine Learning, Azure Synapse Analytics und Azure Data Factory haben.
-
-
-  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erlangen, finden Sie nachstehend einige Vorschläge:
-
-  - Arbeiten Sie als Microsoft Dynamics 365-Berater für Customer Insights-Projekte.
-
-  - Treten Sie der [Dynamics 365-Community](https://community.dynamics.com/) bei. Sie müssen keine Zertifizierung innehaben.
-
-  - Nutzen Sie verfügbare Lernpfade in Microsoft Learn, und führen Sie weitere praktische Übungen durch.
-
-  - Melden Sie sich zu einem Präsenzschulungskurs an.
-subTitle: Microsoft Customer Data Platform Specialists implementieren Lösungen, die Einblicke in Kundenprofile bieten und mit denen Kundenbindungsaktivitäten nachverfolgt werden können, sodass das Benutzererlebnis der Kund*innen verbessert und die Kundenbindung gesteigert werden kann.
+summary: "Wenn Ihr Spezialgebiet darin besteht, Lösungen zu implementieren, die Einblicke in Kundenprofile bieten und mit denen Kundenbindungsaktivitäten nachverfolgt werden können, sodass die Kundenerfahrung verbessert und die Kundenbindung gesteigert werden kann, könnte diese Zertifizierung Ihnen helfen, Ihre Fähigkeiten nachzuweisen und Karrierechancen zu eröffnen.\n\nAls Kandidat für diese Zertifizierung sollten Sie praktische Erfahrung mit Dynamics 365 Customer Insights, Power Query, Microsoft Dataverse, Common Data Model, Microsoft Power Platform und mindestens einer zusätzlichen Dynamics\_365-Anwendung haben. Darüber hinaus benötigen Sie direkte Erfahrung mit Verfahren im Zusammenhang mit Datenschutz, Compliance, Einwilligung, Sicherheit, verantwortungsvoller KI und Datenaufbewahrungsrichtlinien.\n\nAußerdem benötigen Sie Erfahrung mit Prozessen im Zusammenhang mit KPI sowie Datenaufbewahrung, -validierung, -visualisierung, -aufbereitung, -abgleich, -fragmentierung, -segmentierung und -erweiterung. Sie sollten ein allgemeines Verständnis von Azure Machine Learning, Azure Synapse Analytics und Azure Data Factory haben.\n\nWenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erlangen, finden Sie nachstehend einige Vorschläge:\n- Arbeiten Sie als Microsoft Dynamics\_365-Berater für Customer Insights-Projekte.\n- Treten Sie der [Dynamics\_365-Community](https://community.dynamics.com/) bei. Sie müssen keine Zertifizierung innehaben.\n- Nutzen Sie verfügbare Lernpfade in Microsoft Learn, und führen Sie weitere praktische Übungen durch.\n- Melden Sie sich zu einem Präsenzschulungskurs an."
+subTitle: 'Microsoft Customer Data Platform Specialists implementieren Lösungen, die Einblicke in Kundenprofile bieten und mit denen Kundenbindungsaktivitäten nachverfolgt werden können, sodass das Benutzererlebnis der Kund*innen verbessert und die Kundenbindung gesteigert werden kann.'
 levels:
-- intermediate
+  - intermediate
 skills:
-- Design Customer Insights solutions
-- Ingest data into Customer Insights
-- Create customer profiles by unifying data
-- Implement AI predictions in Customer Insights
-- Configure measures and segments
-- Configure third-party connections
-- Administer Customer Insights
+  - Design Customer Insights solutions
+  - Ingest data into Customer Insights
+  - Create customer profiles by unifying data
+  - Implement AI predictions in Customer Insights
+  - Configure measures and segments
+  - Configure third-party connections
+  - Administer Customer Insights
 paths:
-- uid: learn-dynamics.get-started-customer-data-platform
-- uid: learn-dynamics.ingest-data-customer-insights
-- uid: learn-bizapps.unified-customer-profile
-- uid: learn-dynamics.working-with-customer-insights
-- uid: learn-dynamics.enrich-data
-- uid: learn-dynamics.configure-third-party-connections
-- uid: learn-dynamics.administer-customer-data-platform
+  - uid: learn-dynamics.get-started-customer-data-platform
+  - uid: learn-dynamics.ingest-data-customer-insights
+  - uid: learn-dynamics.unified-customer-profile
+  - uid: learn-dynamics.working-with-customer-insights
+  - uid: learn-dynamics.enrich-data
+  - uid: learn-dynamics.configure-third-party-connections
+  - uid: learn-dynamics.administer-customer-data-platform
 roles:
-- data-engineer
-- data-analyst
-- data-scientist
-- functional-consultant
+  - data-engineer
+  - data-analyst
+  - data-scientist
+  - functional-consultant
 type: specialty
 products:
-- azure-data-factory
-- azure-data-lake
-- azure-synapse-analytics
-- dynamics-365
-- dynamics-cust-insights
-- dynamics-customer-engagement
-- power-platform
-- power-query
-- common-data-service
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWO6YH
+  - azure-data-factory
+  - azure-data-lake
+  - azure-synapse-analytics
+  - dynamics-365
+  - dynamics-cust-insights
+  - dynamics-customer-engagement
+  - power-platform
+  - power-query
+  - common-data-service
+courses:
+  - uid: course.mb-260t00
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWO6YH'
 exams:
-- uid: exam.mb-260
+  - uid: exam.mb-260
 resources:
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
-  href: ../deals.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
-  href: ../badges.md
+  - title: Zertifizierungsposter
+    description: 'Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL'
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Exam Replay
+    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
+    href: ../deals.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Unterstützung von Zertifizierungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Teilen Sie Ihre Zertifizierungsbadges.
+    description: 'Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.'
+    href: ../badges.md
