--- a/learn-certs-pr/exams/da-100.yml
+++ b/learn-certs-pr/exams/da-100.yml
@@ -1,86 +1,95 @@
 ### YamlMime:Examination
-title: Analysieren von Daten mit Microsoft Power BI
+title: "Analysieren von Daten mit Microsoft Power\_BI"
 metadata:
   title: 'Examen DA-100: Analyzing Data with Microsoft Power BI'
   description: 'Examen DA-100: Analyzing Data with Microsoft Power BI'
-  ms.openlocfilehash: 6f38c83713e18147750164b73e89ce4b5e1afe02
-  ms.sourcegitcommit: a99616c85658bcdbb3b95b115da620965190777e
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 01/25/2022
-  ms.locfileid: "137685930"
 uid: exam.da-100
 displayName: DA-100
-summary: "> [!WARNING]\n> DIESE PRÜFUNG WIRD AM 31. MÄRZ 2022 AUSGEMUSTERT. Eine Ersatzprüfung ([Prüfung PL-300: Microsoft Power BI Data Analyst](/learn/certifications/exams/pl-300)) wird am 28. Februar 2022 zur Verfügung gestellt. Weitere Informationen zur neuen Prüfung und zur Ausmusterung finden Sie in [diesem Blogbeitrag](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/announcing-a-new-name-for-the-data-analyst-associate/ba-p/2388941).\n> \n> [!IMPORTANT]\n> Der Inhalt dieser Prüfung wurde am 23. November 2021 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\n<br/>\nData Analysts nutzen Microsoft Power BI, um den Wert der Datenressourcen eines Unternehmens zu maximieren. Als Fachexperte sind Data Analysts dafür verantwortlich, skalierbare Datenmodelle zu entwerfen und zu erstellen, Daten zu bereinigen und zu transformieren und erweiterte Analysefunktionen zu ermöglichen, die durch leicht verständliche Datenvisualisierungen einen aussagekräftigen Geschäftswert bieten. Data Analysts arbeiten auch mit wichtigen Projektbeteiligten in verschiedenen Branchen zusammen, um relevante Erkenntnisse basierend auf den identifizierten Geschäftsanforderungen zu liefern.\n\n<br/>  \nData Analysts sollten ein grundlegendes Verständnis von Datenrepositorys und Datenverarbeitung sowohl lokal als auch in der Cloud besitzen.\n\nWenn Sie diese Zertifizierungsexamen bestehen, kann dies bei einer ACE-Hochschule angerechnet werden. Weitere Informationen finden Sie unter [ACE-Leistungspunkt für Zertifizierungsprüfungen](/learn/certifications/ace-credit-for-certification-exams)."
+summary: |-
+  > [!WARNING]
+  > DIESE PRÜFUNG WIRD AM 31. MÄRZ 2022 AUSGEMUSTERT. Eine Ersatzprüfung ([Prüfung PL-300: Microsoft Power BI Data Analyst](/learn/certifications/exams/pl-300)) wird am 28. Februar 2022 zur Verfügung gestellt. Weitere Informationen zur neuen Prüfung und zur Ausmusterung finden Sie in [diesem Blogbeitrag](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/announcing-a-new-name-for-the-data-analyst-associate/ba-p/2388941).
+
+  <br/>
+  Data Analysts nutzen Microsoft Power BI, um den Wert der Datenressourcen eines Unternehmens zu maximieren. Als Fachexperte sind Data Analysts dafür verantwortlich, skalierbare Datenmodelle zu entwerfen und zu erstellen, Daten zu bereinigen und zu transformieren und erweiterte Analysefunktionen zu ermöglichen, die durch leicht verständliche Datenvisualisierungen einen aussagekräftigen Geschäftswert bieten. Data Analysts arbeiten auch mit wichtigen Projektbeteiligten in verschiedenen Branchen zusammen, um relevante Erkenntnisse basierend auf den identifizierten Geschäftsanforderungen zu liefern.
+
+  <br/>  
+  Data Analysts sollten ein grundlegendes Verständnis von Datenrepositorys und Datenverarbeitung sowohl lokal als auch in der Cloud besitzen.
+
+  Wenn Sie diese Zertifizierungsexamen bestehen, kann dies bei einer ACE-Hochschule angerechnet werden. Weitere Informationen finden Sie unter [ACE-Leistungspunkt für Zertifizierungsprüfungen](/learn/certifications/ace-credit-for-certification-exams).
+
+  > [!IMPORTANT]
+  > Der Inhalt dieser Prüfung wurde am 23. November 2021 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.
+  > 
+  > HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).
 subTitle: 'In diesem Examen wird Ihre Fähigkeit geprüft, die folgenden technischen Aufgaben zu erfüllen: Das Aufbereiten von Daten; das Modellieren von Daten; das Visualisieren von Daten; das Analysieren von Daten und das Bereitstellen und Verwalten von Lieferungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4qlRu
-practiceTestUrl: https://www.mindhub.com/da-100-analyzing-data-with-microsoft-power-bi-microsoft-official-practice-test/p/MU-DA-100?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4qlRu'
+practiceTestUrl: 'https://www.mindhub.com/da-100-analyzing-data-with-microsoft-power-bi-microsoft-official-practice-test/p/MU-DA-100?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice'
 providers:
-- providerType: pearson-vue
-  examUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=DA-100&examname=Exam%20DA-100:%20Analyzing%20Data%20with%20Microsoft%20Power%20BI&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fda-100
+  - providerType: pearson-vue
+    examUrl: 'https://examregistration.microsoft.com/?locale=en-us&examcode=DA-100&examname=Exam%20DA-100:%20Analyzing%20Data%20with%20Microsoft%20Power%20BI&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fda-100'
 locales:
-- en
-- zh-cn
-- ko
-- ja
-- fr
-- de
-- es
-- pt-br
-- ru
-- ar-sa
-- zh-tw
-- it
-- id-id
+  - en
+  - zh-cn
+  - ko
+  - ja
+  - fr
+  - de
+  - es
+  - pt-br
+  - ru
+  - ar-sa
+  - zh-tw
+  - it
+  - id-id
 levels:
-- intermediate
+  - intermediate
 skills:
-- The content of this exam was updated on November 23, 2021. Please download the exam skills outline below to see what changed.
-- Prepare the data (20-25%)
-- Model the data (25-30%)
-- Visualize the data (20-25%)
-- Analyze the data (10-15%)
-- Deploy and maintain deliverables (10-15%)
+  - 'The content of this exam was updated on November 23, 2021. Please download the exam skills outline below to see what changed.'
+  - Prepare the data (20-25%)
+  - Model the data (25-30%)
+  - Visualize the data (20-25%)
+  - Analyze the data (10-15%)
+  - Deploy and maintain deliverables (10-15%)
 retirementDate: 03/31/2022
 roles:
-- data-analyst
+  - data-analyst
 products:
-- power-bi
+  - power-bi
 courses:
-- uid: course.da-100t00
+  - uid: course.da-100t00
 paths:
-- uid: learn-bizapps.get-started-data-analytics
-- uid: learn-bizapps.data-preparation-in-power-bi
-- uid: learn-bizapps.model-power-bi
-- uid: learn-bizapps.visual-data-power-bi
-- uid: learn-bizapps.data-analysis-power-bi
-- uid: learn-bizapps.manage-workspaces-datasets-power-bi
+  - uid: learn-bizapps.get-started-data-analytics
+  - uid: learn-bizapps.data-preparation-in-power-bi
+  - uid: learn-bizapps.model-power-bi
+  - uid: learn-bizapps.visual-data-power-bi
+  - uid: learn-bizapps.data-analysis-power-bi
+  - uid: learn-bizapps.manage-workspaces-datasets-power-bi
 relatedCertifications:
-- related:
-    uid: certification.data-analyst-associate
+  - related:
+      uid: certification.data-analyst-associate
 resources:
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über die nötigen Schritte für eine Zertifizierung als Data AnaIyst Associate und über die zur Verfügung stehenden Ressourcen, die Ihnen bei der Vorbereitung helfen können.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AzbJ
-- title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
-  href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-  href: ../help.md
-- title: Zertifizierungsdashboard
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
-  href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
-  href: ../certification-exam-policies.md
+  - title: Reise zur Zertifizierung
+    description: 'Informieren Sie sich über die nötigen Schritte für eine Zertifizierung als Data AnaIyst Associate und über die zur Verfügung stehenden Ressourcen, die Ihnen bei der Vorbereitung helfen können.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AzbJ'
+  - title: Schulungs- und Zertifizierungsleitfaden
+    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+    href: 'https://aka.ms/TrainingCertDeck'
+  - title: Zertifizierungsposter
+    description: 'Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.'
+    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL'
+  - title: Exam Replay
+    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
+    href: ../deals.md
+  - title: Unterstützung bei Zertifizierungsprüfungen
+    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+    href: ../help.md
+  - title: Zertifizierungsdashboard
+    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
+    href: 'https://www.microsoft.com/learning/dashboard.aspx'
+  - title: Unterkünfte anfordern
+    description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+    href: ../request-accommodations.md
+  - title: Prüfungsrichtlinien und FAQs
+    description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+    href: ../certification-exam-policies.md
